Fix SpotBugs findings in the port sound-pool backends
The aggregated quality report (and the Android build jobs) run SpotBugs
on the port modules and flagged the new Android GameSoundPool:

- new Integer(int) -> Integer.valueOf(int) (DM_NUMBER_CTOR) across
  GameSoundPool (Android) and JavaSESoundPool (JavaSE), and the one
  new Long(...) added to IOSImplementation's sound-pool loader.
- GameSoundPool ignored the boolean result of File.delete() on temp
  files (RV_RETURN_VALUE_IGNORED_BAD_PRACTICE); route both call sites
  through a deleteQuietly() helper that consumes the result and falls
  back to deleteOnExit().

Verified the JavaSE port still compiles.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>